<resources>
    <string name="app_name">WeatherAppWithKotlin</string>
    <string name="CityNameTextView">City Name</string>
    <string name="LastForecastUpdateTime">Last Update</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="Temperature">Temp</string>
    <string name="WeatherCondition">Condition</string>
    <string name="TemperatureInterval">Max/Min Temperature</string>
    <string name="BackGroundDescription">BackgroundDescription</string>
    <string name="SearchBar">Search</string>
    <string name="Hours">Hours</string>
    <string name="Days">Days</string>
    <string name="CITY_URL">https://geocoding-api.open-meteo.com/</string>
    <string name="Forecast_URL">https://api.open-meteo.com/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Celsius">°C </string>
    <string name="Speed">  m/s</string>
    <string name="Done">Done!</string>
    <string name="loading">Loading...</string>
    <string name="close">Close</string>
    <string name="notification">If the button appears but the data is not updated, please wait</string>
</resources>