<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info">

    <ImageView
        android:id="@+id/BackgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="10"
        android:scaleType="fitXY"
        android:src="@drawable/main_fragment_background"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/InformationTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#2900A8F7"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/InformationTableContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/CityNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:fontFamily="@font/playkidz"
                android:text="@string/CityNameTextView"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/InformationTableBackGround" />

            <TextView
                android:id="@+id/LastForecastUpdateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/playkidz"
                android:text="@string/LastForecastUpdateTime"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:alpha="0.7"
                android:id="@+id/itemSpinner"
                android:background="@android:drawable/editbox_background"
                android:layout_width="126dp"
                android:layout_height="43dp"
                android:fontFamily="@font/playkidz"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="60dp"
                app:layout_constraintBottom_toTopOf="@+id/WindSpeed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/CityNameTextView"
                app:layout_constraintTop_toTopOf="parent">

            </Spinner>

            <TextView
                android:id="@+id/InformationTableBackGround"
                android:layout_width="99dp"
                android:layout_height="38dp"
                android:enabled="true"
                android:fontFamily="@font/playkidz"
                android:gravity="center"
                android:text="Warning"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/CityNameTextView"
                tools:layout_editor_absoluteY="2dp" />

            <TextView
                android:id="@+id/WindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playkidz"
                android:letterSpacing="0.1"
                android:text="@string/WindSpeed"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Temperature" />

            <TextView
                android:id="@+id/Temperature"
                android:layout_width="296dp"
                android:layout_height="76dp"
                android:fontFamily="@font/playkidz"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:text="@string/Temperature"
                android:textColor="@color/white"
                android:textSize="44sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CityNameTextView" />

            <TextView
                android:id="@+id/WeatherCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playkidz"
                android:letterSpacing="0.1"
                android:text="@string/WeatherCondition"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WindSpeed" />

            <TextView
                android:id="@+id/TemperatureInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/playkidz"
                android:text="@string/TemperatureInterval"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WeatherCondition" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/SearchBarPreviewText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:fontFamily="@font/playkidz"
                    android:hint="Search here..."
                    android:textColor="@color/white"
                    android:textColorHint="#AFAFAF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="LabelFor" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ScreenSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextColor="@color/white"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        app:tabIndicatorColor="@color/white"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#2900A8F7"
        app:layout_constraintBottom_toTopOf="@+id/MainViewPager"
        app:layout_constraintEnd_toEndOf="@+id/InformationTable"
        app:layout_constraintStart_toStartOf="@+id/InformationTable"
        app:layout_constraintTop_toBottomOf="@+id/InformationTable"
        tools:ignore="MissingConstraints">

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/MainViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/InformationTable"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/InformationTable"
        app:layout_constraintTop_toBottomOf="@+id/ScreenSwitcher"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>